--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: graph_renderer
 description: rendering of a graph for the graph package
 version: 0.0.1
-author:
+author: Leon Fuß
 homepage:
 
 environment:
